# ai-system-diagnosis

./: .env.example  .gitignore  README.md  codex.patch  pyproject.toml
src/: config.py  main.py
src/agent/: conversation.py  prompts.py  tool_schemas.py  tools_registry.py
src/ai_system_diagnoser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: __init__.py  base.py  disk_health.py  event_logs.py  fixes.py  network.py  processes.py  system_overview.py  temperatures.py
src/ui/: __init__.py  chat_window.py
src/utils/: logging_utils.py  os_detect.py  shell_utils.py
tests/: conftest.py  test_system_overview.py  test_tools_integration.py
